fixed link color and spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,7 +28,7 @@ p {
 
 .section.home {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   text-align: center;
   vertical-align: middle;
   flex-direction: column;
@@ -70,9 +70,7 @@ h2 {
 }
 
 .greeting {
-  display: block;
-  text-align: none;
-  align-content: flex-start;
+  line-height: 3em;
 }
 
 .icon {
@@ -92,9 +90,6 @@ h2 {
 }
 
 .arrow {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
   font-size: 2em;
   text-decoration: none;
   color: rgb(41, 49, 172);
@@ -118,10 +113,6 @@ footer {
 
 a {
   text-decoration: none;
-}
-
-a:visited {
-  color: inherit;
 }
 
 .routing {
@@ -252,4 +243,12 @@ a:visited {
 .contact-form * {
   display: block;
   margin: 10px;
+}
+
+a:visited {
+  color: inherit;
+}
+
+a {
+  color: inherit;
 }
